--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,28 @@
-{% extends "layout.html" %} {% block content %}
-<h2 class="mb-3">Log In</h2>
-<form method="POST">
-  {{ form.csrf_token }}
-  <div class="form-group">
-    {{ form.username.label }} {{ form.username(class="form-control") }}
-  </div>
-  <div class="form-group">
-    {{ form.password.label }} {{ form.password(class="form-control") }}
-  </div>
-  {{ form.submit(class="btn btn-primary") }}
-</form>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Flaskedit</title>
+    <link rel="stylesheet" href="style_login.css">
+</head>
+<body>
+    <div class="container">
+        <div class="tabs">
+            <a href="login.html" class="tab active">Login</a>
+            <a href="register.html" class="tab">Register</a>
+        </div>
+        <form class="form" id="loginForm">
+            <div class="form-group">
+                <label for="loginEmail">Email</label>
+                <input type="email" id="loginEmail" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="loginPassword">Password</label>
+                <input type="password" id="loginPassword" name="password" required>
+            </div>
+            <button type="submit" class="button">Login</button>
+        </form>
+    </div>
+</body>
+</html>
